# cineforge

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew.bat  prompt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: Engine.cpp  Engine.h  ShaderManager.cpp  ShaderManager.h  TextureRenderer.cpp  TextureRenderer.h
app/src/main/cpp/jni/: engine_jni.cpp
app/src/main/cpp/math/: Color.h  Rect.h  Vec2.h  Vec3.h
app/src/main/cpp/utils/: Logger.cpp  Logger.h
app/src/main/cpp/video/: VideoDecoder.cpp  VideoDecoder.h
app/src/main/java/com/videoeditor/pro/app/: VideoEditorApplication.kt
app/src/main/java/com/videoeditor/pro/core/di/: DatabaseModule.kt  RepositoryModule.kt
app/src/main/java/com/videoeditor/pro/data/di/: DataStoreModule.kt
app/src/main/java/com/videoeditor/pro/data/local/: ClipDao.kt  DbClip.kt  TimelineDatabase.kt
app/src/main/java/com/videoeditor/pro/data/preferences/: UserPreferences.kt
app/src/main/java/com/videoeditor/pro/data/repository/: InMemoryTimelineRepository.kt  RoomTimelineRepository.kt
app/src/main/java/com/videoeditor/pro/domain/model/: Clip.kt  Timeline.kt  Track.kt
app/src/main/java/com/videoeditor/pro/domain/repository/: TimelineRepository.kt
app/src/main/java/com/videoeditor/pro/presentation/animation/: AnimationPresets.kt  CineForgeTransitions.kt  MotionSystem.kt
app/src/main/java/com/videoeditor/pro/presentation/camera/: CameraAdjustmentPanel.kt
app/src/main/java/com/videoeditor/pro/presentation/editor/: EditorScreen.kt  EditorViewModel.kt  PreviewSurface.kt  TimelineView.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  profile_placeholder.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
engine/: CMakeLists.txt
engine/include/cineforge/core/: Engine.h
engine/include/cineforge/media/: MediaSource.h  ProxyManager.h
engine/include/cineforge/render/: Effect.h  EffectGraph.h  Frame.h  FrameBuffer.h  Renderer.h
engine/include/cineforge/timeline/: Keyframe.h  KeyframeManager.h  Timeline.h
engine/src/core/: Engine.cpp
engine/src/media/: ProxyManager.cpp
engine/src/render/: EffectGraph.cpp  FrameBuffer.cpp  Renderer.cpp
engine/src/timeline/: Keyframe.cpp  KeyframeManager.cpp  Timeline.cpp
gradle/: libs.versions.toml
(+18 files in other folders)
